--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ bleach==6.0.0
 blinker==1.8.2
 cachetools==5.3.1
 certifi==2023.7.22
-cffi==1.16.0
+cffi==1.16.0  # Updated version
 charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
