--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ pandas==2.1.2
 pandocfilters==1.5.1
 parso==0.8.3
 pickleshare==0.7.5
-Pillow==9.5.0
+Pillow==9.5.0 --only-binary=:all:
 plotly==5.16.0
 prompt-toolkit==3.0.39
 protobuf==4.24.4
